--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* comment */
 * {
   padding: 0px;
   margin: 0px;
@@ -6,7 +7,7 @@
   width: 100%;
   position: absolute;
 }
-.authbuttons{
+.authbuttons {
   width: 280px;
   height: 100px;
   display: flex;
@@ -104,8 +105,8 @@
   }
 }
 
-#register input[type=submit],
-#login input[type=submit],
+#register input[type="submit"],
+#login input[type="submit"],
 .button {
   background-color: #ffce0b;
   border: none;
@@ -122,8 +123,8 @@
   border-radius: 3px;
 }
 
-#register input[type=submit],
-#login input[type=submit],
+#register input[type="submit"],
+#login input[type="submit"],
 .button:hover {
   transition: ease;
   animation-name: button-anim;
@@ -138,7 +139,7 @@
   min-height: 100%;
 }
 
-#logForm{
+#logForm {
   background: white;
   width: 100%;
   height: 100vh;
@@ -147,7 +148,8 @@
   position: absolute;
 }
 
-#regForm, #logForm{
+#regForm,
+#logForm {
   background-color: #ffffff45;
   width: 100%;
   height: 100vh;
@@ -156,7 +158,8 @@
   position: absolute;
 }
 
-#register, #login{
+#register,
+#login {
   display: flex;
   flex-direction: column;
   padding: 10px 10px;
@@ -170,7 +173,7 @@
 }
 
 #register input,
-#login input{
+#login input {
   margin: 10px;
   padding: 10px 10px;
   width: 300px;
